# xes

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: example1.rs
examples/inputs/: example1.xml
examples/outputs/: result1.xml
src/: lib.rs  main.rs  ontology.rs
src/ontology/: attribute.rs  event.rs  extension.rs  log.rs  trace.rs
