[package]
name = "xes"
version = "0.1.0"
authors = ["Roni Hämäläinen <roni.hamalainen@tuni.fi>"]
edition = "2021"
description = "Support for reading and writing eXtensible Event Stream (XES) format."
readme = "README.md"
repository = "https://github.com/RHamalainen/xes"
license = "MIT OR Apache-2.0"
keywords = ["xes", "event", "stream"]
categories = ["encoding", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.17.0"
quick-xml = "0.27.1"
